# mkosi-lab

./: .gitignore  .gitmodules  Makefile  README.md  Scratch.md  Vagrantfile  ansible.cfg  mkosi-esp-project-spec.md  mkosi.conf  pyproject.toml
ansible/: build-mkosi-esp-project-provcont.yml  build-mkosi-esp-project.yml  create-uv-mkosi-project.yml  example-vars.yml  requirements.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: install-btop.yml
ansible/roles/mkosi_esp_project/: README.md
ansible/roles/mkosi_esp_project/defaults/: main.yml
ansible/roles/mkosi_esp_project/meta/: main.yml
ansible/roles/mkosi_esp_project/tasks/: build.yml  git_commit.yml  main.yml  project.yml
ansible/roles/mkosi_esp_project/templates/: README.md.j2  gitignore.j2  mkosi.conf.j2
ansible/roles/uv_mkosi_project_baseline/defaults/: main.yml
ansible/roles/uv_mkosi_project_baseline/meta/: main.yml
ansible/roles/uv_mkosi_project_baseline/tasks/: main.yml
ansible/roles/uv_mkosi_project_baseline/templates/: boot-payload.py.j2  boot-payload.service.j2  mkosi.conf.j2  sysusers-vagrant.conf.j2  vagrant-setup.j2  vagrant-setup.service.j2
docs/: WSL-vagrant-quirks.md  ansible-baseline-role.md  operator-usbip-process.md  project-history.md  provcont-hsm-dual-domain-spec.md  recreate-project.md  session-log.md
infra/: Vagrantfile
mkosi.extra/etc/apt/apt.conf.d/: 01proxy
mkosi.extra/etc/systemd/network/: 10-mkosi-lab-static.network
mkosi.extra/etc/systemd/system/: mkosi-lab-vagrant-setup.service  mkosi-lab.service  (+2 more)
src/mkosi_lab/: __init__.py
src/pe_uki_lab/: __init__.py
(+7 files in other folders)
